Fix some small bugs with grapl provision and swarm (#487)
* Better swarm - do CWAgent last

* minor ipynb fix

* improve grapl provision ipynb

* use py37 by default

* Improved grapl provision a lot

* Store schema in ipynb

* add print from nate

--- a/etc/Grapl Provision.ipynb
+++ b/etc/Grapl Provision.ipynb
@@ -6,11 +6,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\">> Please wait for 'pip done!' before moving to the next cell.\")\n",
     "!python -m pip install --upgrade -q pip\n",
     "!pip install typing-extensions\n",
     "!pip install pydgraph\n",
     "#!pip install grapl_analyzerlib\n",
-    "!pip install --index-url https://test.pypi.org/simple/ grapl_analyzerlib"
+    "!pip install --index-url https://test.pypi.org/simple/ grapl_analyzerlib\n",
+    "print(\">> pip done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import annotations\n",
+    "import json\n",
+    "from typing import *\n",
+    "\n",
+    "import pydgraph  # type: ignore\n",
+    "from grapl_analyzerlib.node_types import EdgeRelationship, PropPrimitive, PropType, EdgeT\n",
+    "from grapl_analyzerlib.nodes.base import BaseSchema\n",
+    "from grapl_analyzerlib.prelude import *\n",
+    "from pydgraph import DgraphClient, DgraphClientStub\n",
+    "\n",
+    "import boto3\n",
+    "\n",
+    "if TYPE_CHECKING:\n",
+    "    from mypy_boto3_dynamodb import DynamoDBServiceResource\n",
+    "\n",
+    "print(\">> Okay, done setting up imports\")"
    ]
   },
   {
@@ -22,22 +48,6 @@
     "deployment_name = \"\"  # Fill this in!\n",
     "\n",
     "assert deployment_name, \"Please insert your deployment name here.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "from typing import *\n",
-    "\n",
-    "import pydgraph  # type: ignore\n",
-    "from grapl_analyzerlib.node_types import EdgeRelationship, PropPrimitive, PropType\n",
-    "from grapl_analyzerlib.nodes.base import BaseSchema\n",
-    "from grapl_analyzerlib.prelude import *\n",
-    "from pydgraph import DgraphClient, DgraphClientStub"
    ]
   },
   {
@@ -66,7 +76,7 @@
     "    )\n",
     "\n",
     "\n",
-    "def query_dgraph_predicate(client: \"GraphClient\", predicate_name: str):\n",
+    "def query_dgraph_predicate(client: \"GraphClient\", predicate_name: str) -> Any:\n",
     "    query = f\"\"\"\n",
     "        schema(pred: {predicate_name}) {{  }}\n",
     "    \"\"\"\n",
@@ -78,15 +88,14 @@
     "\n",
     "    return res\n",
     "\n",
-    "\n",
-    "def meta_into_edge(schema, predicate_meta):\n",
+    "def meta_into_edge(schema, predicate_meta) -> EdgeT:\n",
     "    if predicate_meta.get(\"list\"):\n",
     "        return EdgeT(type(schema), BaseSchema, EdgeRelationship.OneToMany)\n",
     "    else:\n",
     "        return EdgeT(type(schema), BaseSchema, EdgeRelationship.OneToOne)\n",
     "\n",
     "\n",
-    "def meta_into_property(schema, predicate_meta):\n",
+    "def meta_into_property(schema, predicate_meta) -> PropType:\n",
     "    is_set = predicate_meta.get(\"list\")\n",
     "    type_name = predicate_meta[\"type\"]\n",
     "    primitive = None\n",
@@ -96,22 +105,22 @@
     "        primitive = PropPrimitive.Int\n",
     "    if type_name == \"bool\":\n",
     "        primitive = PropPrimitive.Bool\n",
-    "\n",
+    "    \n",
+    "    assert primitive is not None\n",
     "    return PropType(primitive, is_set, index=predicate_meta.get(\"index\", []))\n",
     "\n",
     "\n",
-    "def meta_into_predicate(schema, predicate_meta):\n",
+    "def meta_into_predicate(schema, predicate_meta) -> Union[EdgeT, PropType]:\n",
     "    try:\n",
     "        if predicate_meta[\"type\"] == \"uid\":\n",
     "            return meta_into_edge(schema, predicate_meta)\n",
     "        else:\n",
     "            return meta_into_property(schema, predicate_meta)\n",
     "    except Exception as e:\n",
-    "        LOGGER.error(f\"Failed to convert meta to predicate: {predicate_meta} {e}\")\n",
-    "        raise e\n",
+    "        raise Exception(f\"Failed to convert meta to predicate: {predicate_meta}\") from e\n",
     "\n",
     "\n",
-    "def query_dgraph_type(client: \"GraphClient\", type_name: str):\n",
+    "def query_dgraph_type(client: \"GraphClient\", type_name: str) -> List[Any]:\n",
     "    query = f\"\"\"\n",
     "        schema(type: {type_name}) {{ type }}\n",
     "    \"\"\"\n",
@@ -138,7 +147,7 @@
     "    return predicate_metas\n",
     "\n",
     "\n",
-    "def extend_schema(graph_client: GraphClient, schema: \"BaseSchema\"):\n",
+    "def extend_schema(graph_client: GraphClient, schema: \"BaseSchema\") -> None:\n",
     "    predicate_metas = query_dgraph_type(graph_client, schema.self_type())\n",
     "\n",
     "    for predicate_meta in predicate_metas:\n",
@@ -149,11 +158,24 @@
     "            schema.add_edge(predicate_meta[\"predicate\"], predicate, \"\")\n",
     "\n",
     "\n",
+    "def store_schema(table, schema: \"BaseSchema\") -> None:\n",
+    "    for f_edge, (_, r_edge) in schema.get_edges().items():\n",
+    "        if not (f_edge and r_edge):\n",
+    "            print(f\"!! We found an edge that is missing a reverse edge: {f_edge}\")\n",
+    "            continue\n",
+    "\n",
+    "        table.put_item(Item={\"f_edge\": f_edge, \"r_edge\": r_edge})\n",
+    "        table.put_item(Item={\"f_edge\": r_edge, \"r_edge\": f_edge})\n",
+    "        print(f\"stored edge mapping: {f_edge} {r_edge}\")\n",
+    "\n",
+    "\n",
     "def provision_master_graph(\n",
     "    master_graph_client: GraphClient, schemas: Sequence[\"BaseSchema\"]\n",
     ") -> None:\n",
     "    mg_schema_str = format_schemas(schemas)\n",
-    "    set_schema(master_graph_client, mg_schema_str)"
+    "    set_schema(master_graph_client, mg_schema_str)\n",
+    "\n",
+    "print(\">> Okay, done setting up helper functions\")"
    ]
   },
   {
@@ -162,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mclient = DgraphClient(DgraphClientStub(deployment_name.lower() + \".dgraph.grapl:9080\"))"
+    "mclient = DgraphClient(DgraphClientStub(deployment_name.lower() + \".dgraph.grapl:9080\"))\n",
+    "dynamodb: DynamoDBServiceResource = boto3.resource(\"dynamodb\")"
    ]
   },
   {
@@ -175,8 +198,7 @@
    "source": [
     "# drop_all(mclient)\n",
     "\n",
-    "\n",
-    "def provision_mg(mclient) -> None:\n",
+    "def provision_mg(mclient: DgraphClient, dynamodb: DynamoDBServiceResource) -> None:\n",
     "    # drop_all(mclient)\n",
     "\n",
     "    schemas = (\n",
@@ -201,8 +223,13 @@
     "\n",
     "    provision_master_graph(mclient, schemas)\n",
     "\n",
+    "    table = dynamodb.Table(f\"{deployment_name}-grapl_schema_table\")\n",
+    "    for schema in schemas:\n",
+    "        store_schema(table, schema)\n",
     "\n",
-    "provision_mg(mclient)"
+    "\n",
+    "provision_mg(mclient=mclient, dynamodb=dynamodb)\n",
+    "print(\">> Done provisioning!\")"
    ]
   },
   {
@@ -216,7 +243,6 @@
    },
    "outputs": [],
    "source": [
-    "from __future__ import annotations\n",
     "\n",
     "import os\n",
     "import string\n",
@@ -224,20 +250,14 @@
     "from random import choice, randint\n",
     "from typing import TYPE_CHECKING\n",
     "\n",
-    "import boto3\n",
-    "\n",
-    "if TYPE_CHECKING:\n",
-    "    from mypy_boto3_dynamodb import DynamoDBServiceResource\n",
-    "\n",
     "\n",
     "def hash_password(cleartext, salt) -> str:\n",
     "    hashed = sha256(cleartext).digest()\n",
     "    return pbkdf2_hmac(\"sha256\", hashed, salt, 512000).hex()\n",
     "\n",
     "\n",
-    "def create_user(username, cleartext):\n",
+    "def create_user(username: str, cleartext: str) -> None:\n",
     "    assert cleartext\n",
-    "    dynamodb: DynamoDBServiceResource = boto3.resource(\"dynamodb\")\n",
     "    table = dynamodb.Table(deployment_name + \"-user_auth_table\")\n",
     "\n",
     "    # We hash before calling 'hashed_password' because the frontend will also perform\n",
@@ -279,9 +299,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "conda_mxnet_latest_p37",
    "language": "python",
-   "name": "conda_python3"
+   "name": "conda_mxnet_latest_p37"
   },
   "language_info": {
    "codemirror_mode": {
@@ -293,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
